# meetscribe

./: .gitignore  README.md  app.py  pyproject.toml
app/: .gitignore  loader.py  pyproject.toml  streamlit_app.py
app/src/app/: crew.py  main.py
app/src/app/config/: agents.yaml  tasks.yaml
app/src/app/graph/: graph.py  state.py
app/utils/: bedrock.py
