[project]
name = "app"
version = "0.1.0"
description = "app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
app = "app.main:run"
run_crew = "app.main:run"
train = "app.main:train"
replay = "app.main:replay"
test = "app.main:test"
run_with_trigger = "app.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
